stops horizontal shift due to scrollbar

--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,7 @@
 body {
   grid-template-columns: 1fr min(55rem, 90%) 1fr;
   font-size: 1.25rem;
+  overflow-y: scroll; /* stops horizontal shift due to scrollbar */
 }
 
 /* Left align the site's title in the header */
